hopefully fixed on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,8 +51,10 @@ html {
 }
 
 body {
+  height: 100%;
   overflow: hidden;
   margin: 0;
+  padding: 0;
   font-family: Roboto-Light;
 }
 
@@ -86,8 +88,8 @@ a {
 }
 
 .content {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 
   display: grid;
   grid-template-rows: 1.5fr 1fr 1.5fr;
